[package]
name = "ombrac-client"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "ombrac-client"
path = "bin/main.rs"
required-features = ["binary"]

[features]
default = [
    "endpoint-default",
    "transport-default",
    "tracing"
]

tracing = ["dep:tracing"]

endpoint-default = ["endpoint-socks"]
endpoint-socks = ["socks-lib"]

transport-default = ["transport-tls"]
transport-quic = ["s2n-quic", "aws-lc-rs"]
transport-tls = ["tokio-rustls", "webpki-roots"]

binary = [
    "clap",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tracing-subscriber",
]

[dependencies]
ombrac = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "io-util"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"], optional = true }
s2n-quic = { workspace = true, features = ["provider-tls-default", "provider-address-token-default"], optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi"], optional = true }

tokio-rustls = { workspace = true, features = ["aws-lc-rs", "early-data"], optional = true }
webpki-roots = { workspace = true, optional = true }

socks-lib = { workspace = true, optional = true }

[lints]
workspace = true