[package]
name = "ombrac-netstack"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true

[features]
default = ["tracing"]

tracing = [
    "dep:tracing"
]

[dependencies]
bytes = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true, features = ["macros", "sync"] }
tracing = { workspace = true, optional = true }
rand = { workspace = true }
smoltcp = { workspace = true, features = [
    "std",
    "async",
    "medium-ip",
    "proto-ipv4",
    "proto-ipv6",
    "socket-tcp",
    "socket-udp",
    "socket-icmp",
    "socket-tcp-cubic",
] }
etherparse = { workspace = true, features = ["std"] }


[lints]
workspace = true
