[package]
name = "ombrac-server"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "ombrac-server"
path = "bin/main.rs"
required-features = ["binary"]

[features]
default = [
    "transport-default",
    "tracing"
]

tracing = ["dep:tracing"]

transport-default = ["transport-tls"]
transport-quic = ["s2n-quic", "aws-lc-rs", "ombrac/s2n-quic"]
transport-tls = ["tokio-rustls", "webpki-roots", "ombrac/tokio-rustls"]

binary = [
    "clap",
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tracing-subscriber",
]

[dependencies]
ombrac = { workspace = true }
tokio = { workspace = true, features = ["net", "sync", "io-util"] }
clap = { workspace = true, features = ["std", "derive", "color", "help", "usage", "error-context", "suggestions"], optional = true }
s2n-quic = { workspace = true, features = ["provider-tls-default", "provider-address-token-default"], optional = true }
aws-lc-rs = { workspace = true, features = ["bindgen"], optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, features = ["ansi"], optional = true }

tokio-rustls = { workspace = true, optional = true }
webpki-roots = { workspace = true, optional = true }

[lints]
workspace = true