[package]
name = "ombrac"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = []

[dependencies]
bytes = { workspace = true }
tokio = { workspace = true, features = ["rt", "net", "io-util", "macros"] }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true