[package]
name = "tests-integration"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
keywords.workspace = true
readme = "../../README.md"

[dependencies]
ombrac-client = { workspace = true }
ombrac-server = { workspace = true }
ombrac-transport = { workspace = true, features = ["quic"] }

tokio = { workspace = true, features = ["full"] }
curl = { workspace = true }
tests-support = { path = "../support" }


[lints]
workspace = true
